# ProjectMeta.cmake

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  main.cpp
test/scripts/: build.sh  docker.ps1
tools/: build.sh
